--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "roboto-fontface": "*",
+    "vue": "^3.2.13",
+    "vuetify": "^3.3.10",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/webfontloader": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -26,8 +31,10 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-vue": "^9.16.1",
     "eslint-plugin-vuejs-accessibility": "1.1.0",
-    "typescript": "~4.5.5",
+    "typescript": "^5.0.0",
     "typescript-eslint": "^0.0.1-alpha.0",
-    "vue-eslint-parser": "^9.3.1"
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "vue-eslint-parser": "^9.3.1",
+    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   }
 }
