--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@mdi/font": "5.9.55",
+    "@mdi/font": "^5.9.55",
+    "axios": "1.4.0",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "vue-router": "^4.0.13",
+    "vuedraggable": "^4.1.0",
     "vuetify": "^3.3.10",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/node": "20.4.5",
+    "@types/vue-router": "^2.0.0",
     "@types/webfontloader": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
