--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest"
   },
   "dependencies": {
     "@mdi/font": "^5.9.55",
     "axios": "1.4.0",
     "core-js": "^3.8.3",
+    "pinia": "^2.1.6",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
@@ -32,10 +34,13 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-airbnb": "^6.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/vue3-jest": "^29.1.0",
+    "babel-core": "^7.0.0-bridge.0",
     "eslint": "^8.46.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-vue": "^9.16.1",
     "eslint-plugin-vuejs-accessibility": "1.1.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.0.0",
     "typescript-eslint": "^0.0.1-alpha.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
