--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-airbnb": "^6.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/test-utils": "^2.4.1",
     "@vue/vue3-jest": "^29.1.0",
     "babel-core": "^7.0.0-bridge.0",
     "eslint": "^8.46.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-vue": "^9.16.1",
     "eslint-plugin-vuejs-accessibility": "1.1.0",
+    "jest-environment-jsdom": "^29.6.2",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.0",
     "typescript-eslint": "^0.0.1-alpha.0",
